--- a/index.html
+++ b/index.html
@@ -24,6 +24,23 @@
                     <a href="tel:+380577780644">+38 (057) 778 06 44</a>
                     <a href="tel:+380577780645">+38 (057) 778 06 45</a>
                     <div class="more_btn"></div>
+                    <div class="phones-popup">
+                        <div class="popup-arrow"></div>
+                        <ul>
+                            <li><a href="tel:+380577780646">+38 (057) 778 06 46</a></li>
+                            <li><a href="tel:+380577780639">+38 (057) 778 06 39</a></li>
+                        </ul>
+                        <div class="border-line"></div>
+                        <div class="phones-header">Oтдел продаж: </div>
+                        <ul>
+                            <li><a href="tel:+380577780639">+38 (057) 778 06 39 (40,44,45)</a></li>
+                            <li><a href="tel:+380500138075">+38 (050) 013 80 75</a></li>
+                            <li><a href="tel:+380677011657">+38 (067) 701 16 57</a></li>
+                            <li><a href="tel:+380632177580">+38 (063) 217 75 80</a></li>
+                            <li><a href="tel:0800408409">0 800 408 409</a> *</li>
+                        </ul>
+                        <span>*со стационарных и мобильных телефонов в пределах Украины бесплатно</span>
+                    </div>
                 </div>
                 <div class="location" id="location">
                     <a href="" class="active">Рус</a> |
@@ -162,6 +179,7 @@
                     <div class="download-file">
                         Прикрепить фаил
                         <input id="file" type="file" multiple>
+                        <label for="file"></label>
                         <div>
                             Загруженно файлов: <span class="files-count">0</span>
                         </div>
@@ -192,30 +210,16 @@
 </header>
 <section class="section1">
     <div class="top_banner_slider">
-        <div class="banner">
-            <div class="container">
-                <div>
-                    <h1>Проектирование, производство, монтаж и сервисное обслуживание</h1>
-                    <p>систем кондиционирования, вентиляции, дымоудаления и воздушного отопления. Кондиционеры КТЦ, вентиляторы ВР и ВК, клапаны, заслонки и воздушные фильтры</p>
-                </div>
-                <div>
-                    <img src="media/main-banner-img.png" alt="">
-                </div>
-
-            </div>
-        </div>
-        <div class="banner">
-            <div class="container">
-                <div>
-                    <h1>Проектирование, производство, монтаж и сервисное обслуживание</h1>
-                    <p>систем кондиционирования, вентиляции, дымоудаления и воздушного отопления. Кондиционеры КТЦ, вентиляторы ВР и ВК, клапаны, заслонки и воздушные фильтры</p>
-                </div>
-                <div>
-                    <img src="media/main-banner-img.png" alt="">
-                </div>
-
-            </div>
-        </div>
+        <div class="banner" style="background-image: url('media/banner-img/1.jpg')"></div>
+        <div class="banner" style="background-image: url('media/banner-img/3.jpg')"></div>
+        <div class="banner" style="background-image: url('media/banner-img/4.jpg')"></div>
+        <div class="banner" style="background-image: url('media/banner-img/5.jpg')"></div>
+        <div class="banner" style="background-image: url('media/banner-img/6.jpg')"></div>
+        <div class="banner" style="background-image: url('media/banner-img/7.jpg')"></div>
+        <div class="banner" style="background-image: url('media/banner-img/8.jpg')"></div>
+        <div class="banner" style="background-image: url('media/banner-img/9.jpg')"></div>
+        <div class="banner" style="background-image: url('media/banner-img/10.jpg')"></div>
+        <div class="banner" style="background-image: url('media/banner-img/banner_1.png')"></div>
     </div>
     <div class="top_banner_slider_arrowsBox">
         <div class="prev_btn"></div>
