--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                                 <a class="dropdown-item" href="about.html">Производство</a>
                                 <a class="dropdown-item" href="about.html">Сервис</a>
                                 <a class="dropdown-item" href="about.html">Стендовые испытания</a>
-                                <a class="dropdown-item" href="a">Вакансии</a>
+                                <a class="dropdown-item" href="about.html">Вакансии</a>
                             </div>
                         </li>
                         <li class="nav-item ">
@@ -93,6 +93,7 @@
                             <div class="drop-menu with-columns">
                                 <div class="menu-column">
                                     <a class="dropdown-item" href="catalog.html">Общепромышленная вентиляция </a>
+                                    <span class="openSubmenu"></span>
                                     <ul>
                                         <li><a href="catalog.html">Вентиляторы радиальные</a></li>
                                         <li><a href="catalog.html">Вентиляторы крышные</a></li>
@@ -100,12 +101,14 @@
                                         <li><a href="catalog.html">Вентиляторы канальные</a></li>
                                     </ul>
                                     <a class="dropdown-item" href="catalog.html">Противопожарное оборудование </a>
+                                    <span class="openSubmenu"></span>
                                     <ul>
                                         <li><a href="catalog.html">Вентиляторы дымоудаления </a></li>
                                         <li><a href="catalog.html">Клапаны дымоудаления</a></li>
                                         <li><a href="catalog.html">Клапаны огнезадерживающие</a></li>
                                     </ul>
                                     <a class="dropdown-item" href="catalog.html">Оборудование для монтажа вентиляторов </a>
+                                    <span class="openSubmenu"></span>
                                     <ul>
                                         <li><a href="catalog.html">Стаканы</a></li>
                                         <li><a href="catalog.html">Виброизоляторы и гибкие вставки</a></li>
@@ -113,14 +116,18 @@
                                 </div>
                                 <div class="menu-column">
                                     <a class="dropdown-item" href="catalog.html">Кондиционеры центральные каркасные КЦК</a>
+                                    <span class="openSubmenu"></span>
                                     <a class="dropdown-item" href="catalog.html">Сетевое оборудование</a>
+                                    <span class="openSubmenu"></span>
                                     <ul>
                                         <li><a href="catalog.html">Клапаны и заслонки </a></li>
                                         <li><a href="catalog.html">Узлы прохода, дефлекторы, зонты, двери, шумоглушители </a></li>
                                         <li><a href="catalog.html">Фильтры, ИРП</a></li>
                                     </ul>
                                     <a class="dropdown-item" href="catalog.html">Автоматизация </a>
+                                    <span class="openSubmenu"></span>
                                     <a class="dropdown-item" href="catalog.html">Отопительное оборудование </a>
+                                    <span class="openSubmenu"></span>
                                     <ul>
                                         <li><a href="catalog.html">Агрегаты воздушно-отопительные </a></li>
                                         <li><a href="catalog.html">Воздухонагреватель (калориферы) </a></li>
