--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                 </button>
                 <div class="collapse navbar-collapse " id="navbar">
                         <button
-                        class="close-menu-btn"
+                        class="close-menu-btn navbar-toggler"
                         type="button"
                         data-toggle="collapse"
                         data-target="#navbar"
@@ -116,6 +116,7 @@
                                 </div>
                                 <div class="menu-column">
                                     <a class="dropdown-item" href="catalog.html">Кондиционеры центральные каркасные КЦК</a>
+                                    <span class="openSubmenu"></span>
                                     <span class="openSubmenu"></span>
                                     <a class="dropdown-item" href="catalog.html">Сетевое оборудование</a>
                                     <span class="openSubmenu"></span>
@@ -182,8 +183,7 @@
                         <label for="org">Организация:</label>
                     </div>
                     <div class="form-item">
-                      <textarea name="message" id="message" cols="3" rows="2" placeholder="Сообщение:">
-                </textarea>
+                      <textarea name="message" id="message" cols="3" rows="2" placeholder="Сообщение:"></textarea>
                         <label for="message">Сообщение:</label>
                     </div>
                     <div class="download-file">
