home page fixes

--- a/index.html
+++ b/index.html
@@ -160,49 +160,52 @@
             <div class="form-btn gradient-btn open_btn" id="ask-btn">
                 <span class="open_btn">ЗАДАТЬ ВОПРОС</span>
             </div>
+<!--            <div class="form-wrap">-->
             <div class="contact-form">
-                <p>Вы можете задать вопрос, заполнив форму, и наши менеджеры ответят вам в самое ближайшее время!</p>
-                <span class="form-btn">
+
+                    <p>Вы можете задать вопрос, заполнив форму, и наши менеджеры ответят вам в самое ближайшее время!</p>
+                    <span class="form-btn">
                 <img src="media/close.svg" alt="">
             </span>
-                <form action="">
-                    <div class="form-item">
-                        <input type="text" placeholder="Имя:" name="name" id="name" autocomplete="off">
-                        <label for="name">Имя:</label>
-                    </div>
-                    <div class="form-item">
-                        <input type="tel" placeholder="Телефон:" name="tel" id="tel" autocomplete="off">
-                        <label for="tel">Телефон:</label>
-                    </div>
-                    <div class="form-item">
-                        <input type="email" placeholder="Email:" name="email" id="email" autocomplete="off">
-                        <label for="email">Email:</label>
-                    </div>
-                    <div class="form-item">
-                        <input type="text" placeholder="Организация:" name="org" id="org" autocomplete="off">
-                        <label for="org">Организация:</label>
-                    </div>
-                    <div class="form-item">
-                      <textarea name="message" id="message" cols="3" rows="2" placeholder="Сообщение:"></textarea>
-                        <label for="message">Сообщение:</label>
-                    </div>
-                    <div class="download-file">
-                        Прикрепить фаил
-                        <input id="file" type="file" multiple>
-                        <label for="file"></label>
+                    <form action="">
+                        <div class="form-item">
+                            <input type="text" placeholder="Имя:" name="name" id="name" autocomplete="off">
+                            <label for="name">Имя:</label>
+                        </div>
+                        <div class="form-item">
+                            <input type="tel" placeholder="Телефон:" name="tel" id="tel" autocomplete="off">
+                            <label for="tel">Телефон:</label>
+                        </div>
+                        <div class="form-item">
+                            <input type="email" placeholder="Email:" name="email" id="email" autocomplete="off">
+                            <label for="email">Email:</label>
+                        </div>
+                        <div class="form-item">
+                            <input type="text" placeholder="Организация:" name="org" id="org" autocomplete="off">
+                            <label for="org">Организация:</label>
+                        </div>
+                        <div class="form-item">
+                            <textarea name="message" id="message" cols="3" rows="2" placeholder="Сообщение:"></textarea>
+                            <label for="message">Сообщение:</label>
+                        </div>
+                        <div class="download-file">
+                            Прикрепить фаил
+                            <input id="file" type="file" multiple>
+                            <label for="file"></label>
+                            <div>
+                                Загруженно файлов: <span class="files-count">0</span>
+                            </div>
+                            <div class="allow-files">
+                                Максимальный размер файла: <span>9.91 MB</span>
+                            </div>
+                            <div class="alert-message">
+                                <span>размер файла превышает максимальный</span></div>
+                        </div>
                         <div>
-                            Загруженно файлов: <span class="files-count">0</span>
                         </div>
-                        <div class="allow-files">
-                            Максимальный размер файла: <span>9.91 MB</span>
-                        </div>
-                        <div class="alert-message">
-                            <span>размер файла превышает максимальный</span></div>
-                    </div>
-                    <div>
-                    </div>
-                    <button class="gradient-btn">отправить</button>
-                </form>
+                        <button class="gradient-btn">отправить</button>
+                    </form>
+<!--                </div>-->
             </div>
         </div>
         <div class="search-wrap">
