--- a/about.html
+++ b/about.html
@@ -39,10 +39,26 @@
         </div>
 
         <div class="about-slider">
-            <div><img src="media/about-img1.png" alt=""></div>
-            <div><img src="media/about-img2.png" alt=""></div>
-            <div><img src="media/about-img3.png" alt=""></div>
-            <div><img src="media/about-img1.png" alt=""></div>
+            <div>
+                <a data-fancybox="aboutGallery" href="media/about-img1.png">
+                    <img src="media/about-img1.png" alt="">
+                </a>
+            </div>
+            <div>
+                <a data-fancybox="aboutGallery" href="media/about-img2.png">
+                    <img src="media/about-img2.png" alt="">
+                </a>
+            </div>
+            <div>
+                <a data-fancybox="aboutGallery" href="media/about-img3.png">
+                    <img src="media/about-img3.png" alt="">
+                </a>
+            </div>
+            <div>
+                <a data-fancybox="aboutGallery" href="media/about-img4.png">
+                    <img src="media/about-img4.png" alt="">
+                </a>
+            </div>
         </div>
         <div class="about-slider-arrows banner_paginator">
             <div class="prev">
