--- a/catalog.html
+++ b/catalog.html
@@ -36,7 +36,7 @@
                             <a href="#" >Общепромышленная вентиляция</a>
                         </li>
                         <li>
-                            <a href="https://www.google.com/webhp?hl=ru&sa=X&ved=0ahUKEwi30dqp7vLiAhUt6KYKHf44CZIQPAgH">Противопожарное оборудование</a>
+                            <a href="https://www.google.com/webhp?hl=ru&sa=X&ved=0ahUKEwi30dqp7vLiAhUt6KYKHf44CZIQPAgH">оборудование</a>
                             <ul class="drop-menu">
                                 <li>
                                     <a href="#">Вентиляторы дымоудаления </a>
@@ -57,6 +57,7 @@
                         </li>
                         <li>
                             <a href="">Сетевое оборудование</a>
+                            <ul class="drop-menu"><li> <a href="http://interconditioner.test-domain1.in.ua/category/catalog/setevoe-oborudovanie/uzly-prohoda-deflektory-zonty-dveri-shumoglushiteli/">Узлы прохода, дефлекторы, зонты, двери, шумоглушители</a></li><li> <a href="http://interconditioner.test-domain1.in.ua/category/catalog/setevoe-oborudovanie/klapany-i-zaslonki/">Клапаны и заслонки</a></li><li> <a href="http://interconditioner.test-domain1.in.ua/category/catalog/setevoe-oborudovanie/filtry-irp/">Фильтры, ИРП</a></li></ul>
                         </li>
                         <li>
                             <a href="#">Автоматизация</a>
