--- a/certificates.html
+++ b/certificates.html
@@ -24,37 +24,37 @@
         <h1>Сертификаты</h1>
         <div class="docs-grid">
             <div class="card">
-                <a href="media/certExs.png" data-fancybox data-caption="" data-type="image" class="review-thumb">
+                <a href="media/certExs.png" data-fancybox="docs">
                     <img src="media/certExs.png" alt="">
                 </a>
                 <p>Приложение к сертификату соответствия. Перечень вентиляторов крышных радиальных дымоудаления (ВДРДВ) с выходом дымовых газов вверх и в две стороны, с пределом огнестойкости 180 минут на температуру дымовых газов +600°С</p>
             </div>
             <div class="card">
-                <a href="media/certExs.png" data-fancybox data-caption="" data-type="image" class="review-thumb">
+                <a href="media/certExs.png" data-fancybox="docs">
                     <img src="media/certExs.png" alt="">
                 </a>
                 <p>Сертификат на систему управления качеством</p>
             </div>
             <div class="card">
-                <a href="media/certExs.png" data-fancybox data-caption="" data-type="image" class="review-thumb">
+                <a href="media/certExs.png" data-fancybox="docs">
                     <img src="media/certExs.png" alt="">
                 </a>
                 <p>Приложение к сертификату соответствия. Перечень вентиляторов крышных радиальных дымоудаления (ВДРДВ) с выходом дымовых газов вверх и в две стороны, с пределом огнестойкости 180 минут на температуру дымовых газов +600°С</p>
             </div>
             <div class="card">
-                <a href="media/certExs.png" data-fancybox data-caption="" data-type="image" class="review-thumb">
+                <a href="media/certExs.png" data-fancybox="docs">
                     <img src="media/certExs.png" alt="">
                 </a>
                 <p>Сертификат на систему управления качеством</p>
             </div>
             <div class="card">
-                <a href="media/certExs.png" data-fancybox data-caption="" data-type="image" class="review-thumb">
+                <a href="media/certExs.png" data-fancybox="docs">
                     <img src="media/certExs.png" alt="">
                 </a>
                 <p>Приложение к сертификату соответствия. Перечень вентиляторов крышных радиальных дымоудаления (ВДРДВ) с выходом дымовых газов вверх и в две стороны, с пределом огнестойкости 180 минут на температуру дымовых газов +600°С</p>
             </div>
             <div class="card">
-                <a href="media/certExs.png" data-fancybox data-caption="" data-type="image" class="review-thumb">
+                <a href="media/certExs.png" data-fancybox="docs">
                     <img src="media/certExs.png" alt="">
                 </a>
                 <p>Сертификат на систему управления качеством</p>
