--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 <header>
     <div class="header-top">
         <div class="container">
-            <div class="logo"><img src="media/logo.svg" alt=""></div>
-            <div class="logo-sm"><img src="media/logo-sm.svg" alt=""></div>
+            <div class="logo"><a href=""><img src="media/logo.svg" alt=""></a></div>
+            <div class="logo-sm"><a href=""><img src="media/logo-sm.svg" alt=""></a></div>
             <div class="header-top-right">
                 <div class="phones-block">
                     <ul class="priority-phones">
@@ -53,8 +53,8 @@
     </div>
     <div class="header-btm">
         <div class="container">
-            <div class="logo"><img src="media/logo.svg" alt=""></div>
-            <div class="logo-sm"><img src="media/logo-sm.svg" alt=""></div>
+            <div class="logo"><a href=""><img src="media/logo.svg" alt=""></a></div>
+            <div class="logo-sm"><a href=""><img src="media/logo-sm.svg" alt=""></a></div>
             <nav class="navbar-expand-xl navbar-light">
                 <button
                         class="navbar-toggler"
